+ Moving 'Pushy Bulldog' (Team C) from '3' to '1' in beer_pong.

# They need to stay in the subteam in order for their first match to count
# One match against Impractical Elephant, one against Trifling Tarpon
+ Moving 'Tan Crane' (Team B) from '09' to 'R' in ping_pong.
+ Moving 'Nice Albatross' (Team B) from 'R' to '09' in ping_pong.

# One match remaining against Frightening Avocet
+ Moving 'Pricey Collie' (Team A) from '09' to '' in ping_pong.
+ Moving 'Pricey Collie' (Team A) from '' to '09' in ping_pong.
+ Moving 'Elastic Pekingese' (Team A) from 'R' to '20' in ping_pong.

# Two matches remaining against Gargantuan Okapi and Gripping Penguin
+ Moving 'Motherly Woodpecker' (Team A) from '14' to '' in ping_pong.
+ Moving 'Motherly Woodpecker' (Team A) from '' to '14' in ping_pong.


# Replacement for Kindly Clownfish and Reflecting Pug's second matches
+ Moving 'Excited Rabbit' (Team C) from 'R' to '20' in ping_pong.
# One match remaining agains Striped Himalayan
Moving 'Reflecting Pug' (Team C) from '09' to '' in ping_pong.
Moving 'Reflecting Pug' (Team C) from '' to '09' in ping_pong.
+ Moving 'Kindly Clownfish' (Team C) from '01' to '' in ping_pong.
+ Moving 'Kindly Clownfish' (Team C) from '' to '01' in ping_pong.

Moving 'Reflecting Pug' (Team C) from '1' to '' in beer_pong.

# Here, Amusing Seal will jump in
+ Moving 'Pricey Collie' (Team A) from '1' to '' in foosball.

# It's okay if there are only 2 players in a beer pong team.
+ Moving 'Lovely Heron' (Team A) from '3' to '' in beer_pong.
+ Moving 'Staid Hornbill' (Team A) from '2' to '' in beer_pong.
+ Moving 'Miserable Alligator' (Team A) from 'R' to '2' in beer_pong.
+ Moving 'Exemplary Cassowary' (Team A) from '2' to '' in beer_pong.
Moving 'Grandiose Orang-utan' (Team B) from '' to '21' in ping_pong.
Moving 'Radiant Booby' (Team B) from '2' to 'R' in beer_pong.
Moving 'Minty Possum' (Team C) from '' to 'R' in beer_pong.
Moving 'Minty Possum' (Team C) from 'R' to '' in beer_pong.