@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
      "output_type": "stream",
      "text": [
       "Team C\n",
-      "Moving 'Minty Possum' (Team C) from 'R' to '' in beer_pong.\n"
+      "Moving 'Unwritten Saiga' (Team C) from '' to '3' in beer_pong.\n"
      ]
     }
    ],
@@ -362,7 +362,7 @@
     "\n",
     "# hf.get_players().set_index(\"nickname\").loc[\"Qualified Buffalo\"]\n",
     "# set_player_subteam(\"Rewarding Ermine\", \"capture_the_flag\", \"\")\n",
-    "set_player_subteam(\"Minty Possum\", \"beer_pong\", \"\")\n",
+    "set_player_subteam(\"Unwritten Saiga\", \"beer_pong\", \"3\")\n",
     "\n",
     "\n",
     "# hf.get_players().set_index(\"nickname\").loc[\"Wide Lionfish\"]\n"
@@ -377,14 +377,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New team and old team 'Team A' are the same.\n"
+      "Moving 'Another Macaw' from 'Team A' to 'Team C'. This affects the subteams {'beer_pong': '1'}\n"
      ]
     }
    ],
@@ -411,7 +411,7 @@
     "    with hf.DATAPATH.joinpath(\"teams/changelog.txt\").open(\"a\", encoding=\"utf-8\") as f:\n",
     "        f.write(log_msg + \"\\n\")\n",
     "\n",
-    "set_player_team(\"Worthy Aurochs\", \"Team A\")\n"
+    "set_player_team(\"Another Macaw\", \"Team C\")\n"
    ]
   },
   {
