@@ -29,7 +29,6 @@ Fickle Gecko,USM,False,False,True,False,False,False,False,False,False,False,Fals
 Tame Mink,MPE,False,True,False,False,False,False,False,False,False,True,True,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,1,0,False,Team A,,,1,,,,,,,,,1,1.0,True
 Corrupt Porpoise,MPA,True,True,True,True,True,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,True,True,False,False,1,0,False,Team A,,,,,,,,,,1,,1,1.0,True
 Frail Skunk,IPP,True,True,False,False,False,True,True,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,1,0,False,Team A,1,,,,,,,,,,,1,1.0,True
-Another Macaw,ESO,False,False,True,False,False,False,False,False,False,False,False,False,False,True,True,False,False,False,False,False,False,False,False,False,False,False,False,1,0,False,Team A,,,,,,,,,,,,0,0.0,True
 Spanish Ferret,USM,False,True,True,True,False,False,False,False,False,False,False,True,True,True,True,False,False,False,False,False,False,False,False,False,False,False,False,2,0,True,Team A,,,,,1,,,,,,,1,0.5,True
 Realistic Coral,IPP,True,False,True,False,False,False,False,False,False,False,False,False,False,True,True,False,False,False,False,False,False,False,False,False,False,False,False,1,0,True,Team A,,,,,1,,,,,,,1,1.0,True
 Staid Hornbill,IPP,False,True,True,True,True,True,True,False,False,False,False,False,False,False,False,False,False,True,True,False,False,True,True,False,False,False,False,3,0,True,Team A,,,,,,,1,,,,,2,0.6666666666666666,True
