@@ -1,4 +1,5 @@
 nickname,institute,is_postdoc,avail_monday,avail_tuesday,avail_thursday,avail_friday,wants_basketball,basketball,wants_running_sprints,running_sprints,wants_volleyball,volleyball,wants_chess,chess,wants_football,football,wants_tennis,tennis,wants_capture_the_flag,capture_the_flag,wants_spikeball,spikeball,wants_beer_pong,beer_pong,wants_foosball,foosball,wants_ping_pong,ping_pong,num_sports,num_sports_not_avail,late_entry,Team,subteam_basketball,subteam_running_sprints,subteam_volleyball,subteam_chess,subteam_football,subteam_tennis,subteam_capture_the_flag,subteam_spikeball,subteam_beer_pong,subteam_foosball,subteam_ping_pong,num_sports_attending,attendance_ratio,confirmation_status
+Another Macaw,ESO,False,False,True,False,False,False,False,False,False,False,False,False,False,True,True,False,False,False,False,False,False,False,False,False,False,False,False,1,0,False,Team C,,,,,,,,,1,,,0,0.0,True
 Precious Deer,IPP,False,False,True,True,False,False,False,False,False,False,False,False,False,True,True,False,False,False,False,True,True,False,False,False,False,False,False,2,0,False,Team C,,,,,1,,,2,,,,2,1.0,True
 Euphoric Vulture,MPE,True,True,True,True,True,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,False,True,True,1,0,True,Team C,,,,,,,,,,,17,1,1.0,True
 Rewarding Ermine,ESO,False,True,True,True,False,False,False,False,False,True,True,False,False,False,False,False,False,True,True,True,True,True,False,True,False,False,False,3,2,False,Team C,,,,,,,,,,,,0,0.0,True
@@ -6,7 +7,7 @@ Minty Possum,MPE,True,True,True,True,True,False,False,True,True,True,True,False,
 Failing Muskrat,IPP,False,True,True,True,True,True,True,False,False,True,True,False,False,True,True,True,True,True,True,False,False,False,False,False,False,True,True,6,0,False,Team C,1,,R,,,4,,,,,06,4,0.6666666666666666,True
 Scientific Angelfish,MPA,False,True,True,True,True,True,True,True,True,True,True,False,False,True,True,False,False,True,True,False,False,False,False,True,True,False,False,6,0,False,Team C,R,R,R,,R,,,,,2,,2,0.3333333333333333,True
 Gargantuan Okapi,ESO,False,True,True,True,True,True,True,False,False,False,False,False,False,False,False,False,False,True,True,True,True,True,True,True,True,True,True,6,0,False,Team C,1,,,,,,,,,R,02,3,0.5,True
-Unwritten Saiga,ESO,True,True,True,True,True,False,False,False,False,True,True,False,False,False,False,True,True,True,True,True,True,True,True,True,True,False,False,6,0,False,Team C,,,2,,,,1,,,3,,3,0.5,True
+Unwritten Saiga,ESO,True,True,True,True,True,False,False,False,False,True,True,False,False,False,False,True,True,True,True,True,True,True,True,True,True,False,False,6,0,False,Team C,,,2,,,,1,,3,3,,3,0.5,True
 Qualified Buffalo,USM,False,False,True,True,True,False,False,False,False,False,False,False,False,True,True,False,False,True,True,False,False,True,True,True,True,True,True,5,0,False,Team C,,,,,,,1,,R,4,14,3,0.6,True
 Pushy Bulldog,MPE,False,True,True,True,True,False,False,True,True,True,True,False,False,True,True,False,False,False,False,True,True,False,False,False,False,True,True,5,0,False,Team C,,R,2,,1,1,,1,1,,16,4,0.8,True
 Excited Rabbit,IPP,False,True,True,False,False,True,True,False,False,True,True,True,True,True,True,False,False,True,False,True,False,True,False,True,False,True,True,5,4,False,Team C,R,,,,R,,,,,,20,0,0.0,False
