@@ -197,3 +197,6 @@ Moving 'Grandiose Orang-utan' (Team B) from '' to '21' in ping_pong.
 Moving 'Radiant Booby' (Team B) from '2' to 'R' in beer_pong.
 Moving 'Minty Possum' (Team C) from '' to 'R' in beer_pong.
 Moving 'Minty Possum' (Team C) from 'R' to '' in beer_pong.
+Moving 'Another Macaw' (Team A) from '' to '1' in beer_pong.
+Moving 'Another Macaw' from 'Team A' to 'Team C'. This affects the subteams {'beer_pong': '1'}
+Moving 'Unwritten Saiga' (Team C) from '' to '3' in beer_pong.
